--- a/en/index.html
+++ b/en/index.html
@@ -38,8 +38,8 @@
             <a href="/en/" title="皮革新茶馆"><span class="header-title-pre"><img src='/images/avatar.png' height='50'/></span></a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/en/posts/"><i class='fas fa-book-open fa-lg'></i> Posts </a><a class="menu-item" href="/en/tags/"><i class='fas fa-tags fa-lg'></i> Tags </a><a class="menu-item" href="/en/categories/"><i class='fas fa-list-alt fa-lg'></i> Categories </a><a class="menu-item" href="/en/game"><i class='fas fa-dice fa-lg'></i> Game </a><a class="menu-item" href="/en/about/"><i class = 'fa fa-question-circle fa-lg'></i> About </a><a class="menu-item" href="https://github.com/dillonzq/LoveIt" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw' aria-hidden='true'></i>  </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
-                        <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/en/posts/"><i class='fas fa-book-open fa-lg'></i> Posts </a><a class="menu-item" href="/en/tags/"><i class='fas fa-tags fa-lg'></i> Tags </a><a class="menu-item" href="/en/categories/"><i class='fas fa-list-alt fa-lg'></i> Categories </a><a class="menu-item" href="/en/game"><i class='fas fa-dice fa-lg'></i> Game </a><a class="menu-item" href="/en/about/"><i class = 'fa fa-question-circle fa-lg'></i> About </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+                        <input type="text" placeholder="Search···" id="search-input-desktop">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw" aria-hidden="true"></i>
                         </a>
@@ -69,7 +69,7 @@
         </div>
         <div class="menu" id="menu-mobile"><div class="search-wrapper">
                     <div class="search mobile" id="search-mobile">
-                        <input type="text" placeholder="Search titles or contents..." id="search-input-mobile">
+                        <input type="text" placeholder="Search···" id="search-input-mobile">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-mobile" title="Search">
                             <i class="fas fa-search fa-fw" aria-hidden="true"></i>
                         </a>
@@ -83,7 +83,7 @@
                     <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/en/posts/" title=""><i class='fas fa-book-open fa-lg'></i>Posts</a><a class="menu-item" href="/en/tags/" title=""><i class='fas fa-tags fa-lg'></i>Tags</a><a class="menu-item" href="/en/categories/" title=""><i class='fas fa-list-alt fa-lg'></i>Categories</a><a class="menu-item" href="/en/game" title=""><i class='fas fa-dice fa-lg'></i>Game</a><a class="menu-item" href="/en/about/" title=""><i class = 'fa fa-question-circle fa-lg'></i>About</a><a class="menu-item" href="https://github.com/dillonzq/LoveIt" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw' aria-hidden='true'></i></a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
+                </div><a class="menu-item" href="/en/posts/" title=""><i class='fas fa-book-open fa-lg'></i>Posts</a><a class="menu-item" href="/en/tags/" title=""><i class='fas fa-tags fa-lg'></i>Tags</a><a class="menu-item" href="/en/categories/" title=""><i class='fas fa-list-alt fa-lg'></i>Categories</a><a class="menu-item" href="/en/game" title=""><i class='fas fa-dice fa-lg'></i>Game</a><a class="menu-item" href="/en/about/" title=""><i class = 'fa fa-question-circle fa-lg'></i>About</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
             </a><a href="javascript:void(0);" class="menu-item" title="Select Language">
                     <i class="fa fa-globe fa-fw" aria-hidden="true"></i>
@@ -96,14 +96,14 @@
     <div class="search-dropdown mobile">
         <div id="search-dropdown-mobile"></div>
     </div><main class="main">
-                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><a href="/en/posts/" title="皮~"><img
+                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><a href="/en/posts/" title="~"><img
         class="lazyload"
         src="/svg/loading.min.svg"
         data-src="/images/avatar.png"
         data-srcset="/images/avatar.png, /images/avatar.png 1.5x, /images/avatar.png 2x"
         data-sizes="auto"
         alt="/images/avatar.png"
-        title="皮~" width="953" height="953" /></a></div><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"><a href="https://t.me/xxxx" title="Telegram" target="_blank" rel="noopener noreffer me"><i class="fab fa-telegram-plane fa-fw" aria-hidden="true"></i></a><a href="https://mastodon.technology/@xxxx" title="Mastodon" target="_blank" rel="noopener noreffer me"><i class="fab fa-mastodon fa-fw" aria-hidden="true"></i></a><a href="mailto:newtea@newtea.tk" title="Email" rel="me"><i class="far fa-envelope fa-fw" aria-hidden="true"></i></a><a href="/en/index.xml" title="RSS" target="_blank" rel="noopener noreffer me"><i class="fas fa-rss fa-fw" aria-hidden="true"></i></a></div></div>
+        title="~" width="953" height="953" /></a></div><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"><a href="https://mastodon.technology/@xxxx" title="Mastodon" target="_blank" rel="noopener noreffer me"><i class="fab fa-mastodon fa-fw" aria-hidden="true"></i></a><a href="mailto:newtea@newtea.tk" title="Email" rel="me"><i class="far fa-envelope fa-fw" aria-hidden="true"></i></a><a href="/en/index.xml" title="RSS" target="_blank" rel="noopener noreffer me"><i class="fas fa-rss fa-fw" aria-hidden="true"></i></a></div></div>
 </div></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2023</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://www.newtea.tk" target="_blank">皮革新茶馆</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
