--- a/en/404.html
+++ b/en/404.html
@@ -27,8 +27,8 @@
             <a href="/en/" title="皮革新茶馆"><span class="header-title-pre"><img src='/images/avatar.png' height='50'/></span></a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/en/posts/"><i class='fas fa-book-open fa-lg'></i> Posts </a><a class="menu-item" href="/en/tags/"><i class='fas fa-tags fa-lg'></i> Tags </a><a class="menu-item" href="/en/categories/"><i class='fas fa-list-alt fa-lg'></i> Categories </a><a class="menu-item" href="/en/game"><i class='fas fa-fan fa-spin fa-lg'></i> Game </a><a class="menu-item" href="/en/about/"><i class = 'fa fa-question-circle fa-lg'></i> About </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
-                        <input type="text" placeholder="Search···" id="search-input-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/en/posts/"><i class='fas fa-book-open fa-lg'></i> Posts </a><a class="menu-item" href="/en/tags/"><i class='fas fa-tags fa-lg'></i> Tags </a><a class="menu-item" href="/en/categories/"><i class='fas fa-list-alt fa-lg'></i> Categories </a><a class="menu-item" href="/en/game"><i class='fas fa-dice fa-lg'></i> Game </a><a class="menu-item" href="/en/about/"><i class = 'fa fa-question-circle fa-lg'></i> About </a><a class="menu-item" href="https://github.com/dillonzq/LoveIt" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw' aria-hidden='true'></i>  </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+                        <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw" aria-hidden="true"></i>
                         </a>
@@ -58,7 +58,7 @@
         </div>
         <div class="menu" id="menu-mobile"><div class="search-wrapper">
                     <div class="search mobile" id="search-mobile">
-                        <input type="text" placeholder="Search···" id="search-input-mobile">
+                        <input type="text" placeholder="Search titles or contents..." id="search-input-mobile">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-mobile" title="Search">
                             <i class="fas fa-search fa-fw" aria-hidden="true"></i>
                         </a>
@@ -72,7 +72,7 @@
                     <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/en/posts/" title=""><i class='fas fa-book-open fa-lg'></i>Posts</a><a class="menu-item" href="/en/tags/" title=""><i class='fas fa-tags fa-lg'></i>Tags</a><a class="menu-item" href="/en/categories/" title=""><i class='fas fa-list-alt fa-lg'></i>Categories</a><a class="menu-item" href="/en/game" title=""><i class='fas fa-fan fa-spin fa-lg'></i>Game</a><a class="menu-item" href="/en/about/" title=""><i class = 'fa fa-question-circle fa-lg'></i>About</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
+                </div><a class="menu-item" href="/en/posts/" title=""><i class='fas fa-book-open fa-lg'></i>Posts</a><a class="menu-item" href="/en/tags/" title=""><i class='fas fa-tags fa-lg'></i>Tags</a><a class="menu-item" href="/en/categories/" title=""><i class='fas fa-list-alt fa-lg'></i>Categories</a><a class="menu-item" href="/en/game" title=""><i class='fas fa-dice fa-lg'></i>Game</a><a class="menu-item" href="/en/about/" title=""><i class = 'fa fa-question-circle fa-lg'></i>About</a><a class="menu-item" href="https://github.com/dillonzq/LoveIt" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw' aria-hidden='true'></i></a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
             </a><a href="javascript:void(0);" class="menu-item" title="Select Language">
                     <i class="fa fa-globe fa-fw" aria-hidden="true"></i>
@@ -98,10 +98,7 @@
         })();
     </script></div>
             </main><footer class="footer">
-        <div class="footer-container">
-            <div class="footer-line">
-                <span id="run-time"></span>
-            </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2023</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://www.newtea.tk" target="_blank">皮革新茶馆</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
+        <div class="footer-container"><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2023</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://www.newtea.tk" target="_blank">皮革新茶馆</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
         </div>
     </footer></div>
 
@@ -110,5 +107,5 @@
             </a><a href="#" id="view-comments" class="fixed-button" title="View Comments">
                 <i class="fas fa-comment fa-fw" aria-hidden="true"></i>
             </a>
-        </div><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/autocomplete.js@0.38.1/dist/autocomplete.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/algoliasearch@4.13.1/dist/algoliasearch-lite.umd.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lazysizes@5.3.2/lazysizes.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sharer.js@0.5.1/sharer.min.js"></script><script type="text/javascript">window.config={"code":{"copyTitle":"Copy to clipboard","maxShownLines":50},"search":{"algoliaAppID":"GZRBY7IKI8","algoliaIndex":"newtea.en","algoliaSearchKey":"39046e6a94fff2fb4fbda704d4fa5ed0","highlightTag":"em","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"algolia"}};</script><script type="text/javascript" src="/js/theme.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@2.1.3/dist/jquery.min.js"></script><script type="text/javascript" src="/js/custom.js"></script></body>
+        </div><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/autocomplete.js@0.38.1/dist/autocomplete.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/algoliasearch@4.13.1/dist/algoliasearch-lite.umd.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lazysizes@5.3.2/lazysizes.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sharer.js@0.5.1/sharer.min.js"></script><script type="text/javascript">window.config={"code":{"copyTitle":"Copy to clipboard","maxShownLines":50},"search":{"algoliaAppID":"GZRBY7IKI8","algoliaIndex":"newtea.en","algoliaSearchKey":"39046e6a94fff2fb4fbda704d4fa5ed0","highlightTag":"em","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"algolia"}};</script><script type="text/javascript" src="/js/theme.min.js"></script></body>
 </html>
