--- a/en/excel-knowledge/index.html
+++ b/en/excel-knowledge/index.html
@@ -51,7 +51,7 @@
             <a href="/en/" title="皮革新茶馆"><span class="header-title-pre"><img src='/images/avatar.png' height='50'/></span></a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/en/posts/"><i class='fas fa-book-open fa-lg'></i> Posts </a><a class="menu-item" href="/en/tags/"><i class='fas fa-tags fa-lg'></i> Tags </a><a class="menu-item" href="/en/categories/"><i class='fas fa-list-alt fa-lg'></i> Categories </a><a class="menu-item" href="/en/game"><i class='fas fa-fan fa-spin fa-lg'></i> Game </a><a class="menu-item" href="/en/about/"><i class = 'fa fa-question-circle fa-lg'></i> About </a><a class="menu-item" href="https://gpt.newtea.tk" title="ChatGPT" rel="noopener noreffer" target="_self"><i class='fa-solid fa-robot fa-lg'></i> ChatGPT </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/en/posts/"><i class='fas fa-book-open fa-lg'></i> Posts </a><a class="menu-item" href="/en/tags/"><i class='fas fa-tags fa-lg'></i> Tags </a><a class="menu-item" href="/en/categories/"><i class='fas fa-list-alt fa-lg'></i> Categories </a><a class="menu-item" href="/en/game"><i class='fas fa-fan fa-spin fa-lg'></i> Game </a><a class="menu-item" href="/en/about/"><i class = 'fa fa-question-circle fa-lg'></i> About </a><a class="menu-item" href="https://gpt.newtea.tk" title="ChatGPT" rel="noopener noreffer" target="_blank"><i class='fa-solid fa-robot fa-lg'></i> ChatGPT </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search···" id="search-input-desktop">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw" aria-hidden="true"></i>
@@ -96,7 +96,7 @@
                     <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/en/posts/" title=""><i class='fas fa-book-open fa-lg'></i>Posts</a><a class="menu-item" href="/en/tags/" title=""><i class='fas fa-tags fa-lg'></i>Tags</a><a class="menu-item" href="/en/categories/" title=""><i class='fas fa-list-alt fa-lg'></i>Categories</a><a class="menu-item" href="/en/game" title=""><i class='fas fa-fan fa-spin fa-lg'></i>Game</a><a class="menu-item" href="/en/about/" title=""><i class = 'fa fa-question-circle fa-lg'></i>About</a><a class="menu-item" href="https://gpt.newtea.tk" title="ChatGPT" rel="noopener noreffer" target="_self"><i class='fa-solid fa-robot fa-lg'></i>ChatGPT</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
+                </div><a class="menu-item" href="/en/posts/" title=""><i class='fas fa-book-open fa-lg'></i>Posts</a><a class="menu-item" href="/en/tags/" title=""><i class='fas fa-tags fa-lg'></i>Tags</a><a class="menu-item" href="/en/categories/" title=""><i class='fas fa-list-alt fa-lg'></i>Categories</a><a class="menu-item" href="/en/game" title=""><i class='fas fa-fan fa-spin fa-lg'></i>Game</a><a class="menu-item" href="/en/about/" title=""><i class = 'fa fa-question-circle fa-lg'></i>About</a><a class="menu-item" href="https://gpt.newtea.tk" title="ChatGPT" rel="noopener noreffer" target="_blank"><i class='fa-solid fa-robot fa-lg'></i>ChatGPT</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
             </a><a href="javascript:void(0);" class="menu-item" title="Select Language">
                     <i class="fa fa-globe fa-fw" aria-hidden="true"></i>
@@ -135,7 +135,8 @@
             </div></div>
         <div class="post-info-line">
             <div class="post-info-md"><span>
-                            <a class="link-to-markdown" href="/en/excel-knowledge/index.md" target="_blank">Read Markdown</a>
+                            
+                            <i class="far fa-copyright fa-fw" aria-hidden="true"></i>皮革新茶馆
                         </span></div>
             <div class="post-info-share">
                 <span><a href="javascript:void(0);" title="Share on Twitter" data-sharer="twitter" data-url="https://newtea.tk/en/excel-knowledge/" data-title="excel"><i class="fab fa-twitter fa-fw" aria-hidden="true"></i></a><a href="javascript:void(0);" title="Share on Facebook" data-sharer="facebook" data-url="https://newtea.tk/en/excel-knowledge/"><i class="fab fa-facebook-square fa-fw" aria-hidden="true"></i></a><a href="javascript:void(0);" title="Share on Hacker News" data-sharer="hackernews" data-url="https://newtea.tk/en/excel-knowledge/" data-title="excel"><i class="fab fa-hacker-news fa-fw" aria-hidden="true"></i></a><a href="javascript:void(0);" title="Share on Line" data-sharer="line" data-url="https://newtea.tk/en/excel-knowledge/" data-title="excel"><i data-svg-src="https://cdn.jsdelivr.net/npm/simple-icons@7.3.0/icons/line.svg" aria-hidden="true"></i></a><a href="javascript:void(0);" title="Share on 微博" data-sharer="weibo" data-url="https://newtea.tk/en/excel-knowledge/" data-title="excel"><i class="fab fa-weibo fa-fw" aria-hidden="true"></i></a></span>
