--- a/flask/index.html
+++ b/flask/index.html
@@ -51,7 +51,7 @@
             <a href="/" title="皮革新茶馆"><span class="header-title-pre"><img src='/images/avatar.png' height='50'/></span></a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/posts/"><i class='fas fa-book-open fa-lg'></i> 所有文章 </a><a class="menu-item" href="/tags/"><i class='fas fa-tags fa-lg'></i> 标签 </a><a class="menu-item" href="/categories/"><i class='fas fa-list-alt fa-lg'></i> 分类 </a><a class="menu-item" href="/game"><i class='fas fa-fan fa-spin fa-lg'></i> 游戏 </a><a class="menu-item" href="/about/"><i class = 'fa fa-question-circle fa-lg'></i> 关于 </a><a class="menu-item" href="https://gpt.newtea.tk" title="ChatGPT" rel="noopener noreffer" target="_self"><i class='fa-solid fa-robot fa-lg'></i> ChatGPT </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/posts/"><i class='fas fa-book-open fa-lg'></i> 所有文章 </a><a class="menu-item" href="/tags/"><i class='fas fa-tags fa-lg'></i> 标签 </a><a class="menu-item" href="/categories/"><i class='fas fa-list-alt fa-lg'></i> 分类 </a><a class="menu-item" href="/game"><i class='fas fa-fan fa-spin fa-lg'></i> 游戏 </a><a class="menu-item" href="/about/"><i class = 'fa fa-question-circle fa-lg'></i> 关于 </a><a class="menu-item" href="https://gpt.newtea.tk" title="ChatGPT" rel="noopener noreffer" target="_blank"><i class='fa-solid fa-robot fa-lg'></i> ChatGPT </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="搜索···" id="search-input-desktop">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-desktop" title="搜索">
                             <i class="fas fa-search fa-fw" aria-hidden="true"></i>
@@ -96,7 +96,7 @@
                     <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
                         取消
                     </a>
-                </div><a class="menu-item" href="/posts/" title=""><i class='fas fa-book-open fa-lg'></i>所有文章</a><a class="menu-item" href="/tags/" title=""><i class='fas fa-tags fa-lg'></i>标签</a><a class="menu-item" href="/categories/" title=""><i class='fas fa-list-alt fa-lg'></i>分类</a><a class="menu-item" href="/game" title=""><i class='fas fa-fan fa-spin fa-lg'></i>游戏</a><a class="menu-item" href="/about/" title=""><i class = 'fa fa-question-circle fa-lg'></i>关于</a><a class="menu-item" href="https://gpt.newtea.tk" title="ChatGPT" rel="noopener noreffer" target="_self"><i class='fa-solid fa-robot fa-lg'></i>ChatGPT</a><a href="javascript:void(0);" class="menu-item theme-switch" title="切换主题">
+                </div><a class="menu-item" href="/posts/" title=""><i class='fas fa-book-open fa-lg'></i>所有文章</a><a class="menu-item" href="/tags/" title=""><i class='fas fa-tags fa-lg'></i>标签</a><a class="menu-item" href="/categories/" title=""><i class='fas fa-list-alt fa-lg'></i>分类</a><a class="menu-item" href="/game" title=""><i class='fas fa-fan fa-spin fa-lg'></i>游戏</a><a class="menu-item" href="/about/" title=""><i class = 'fa fa-question-circle fa-lg'></i>关于</a><a class="menu-item" href="https://gpt.newtea.tk" title="ChatGPT" rel="noopener noreffer" target="_blank"><i class='fa-solid fa-robot fa-lg'></i>ChatGPT</a><a href="javascript:void(0);" class="menu-item theme-switch" title="切换主题">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
             </a><a href="javascript:void(0);" class="menu-item" title="选择语言">
                     <i class="fa fa-globe fa-fw" aria-hidden="true"></i>
@@ -217,7 +217,8 @@
             </div></div>
         <div class="post-info-line">
             <div class="post-info-md"><span>
-                            <a class="link-to-markdown" href="/flask/index.md" target="_blank">阅读原始文档</a>
+                            
+                            <i class="far fa-copyright fa-fw" aria-hidden="true"></i>皮革新茶馆
                         </span></div>
             <div class="post-info-share">
                 <span><a href="javascript:void(0);" title="分享到 Twitter" data-sharer="twitter" data-url="https://newtea.tk/flask/" data-title="flask" data-hashtags="flask,IT"><i class="fab fa-twitter fa-fw" aria-hidden="true"></i></a><a href="javascript:void(0);" title="分享到 Facebook" data-sharer="facebook" data-url="https://newtea.tk/flask/" data-hashtag="flask"><i class="fab fa-facebook-square fa-fw" aria-hidden="true"></i></a><a href="javascript:void(0);" title="分享到 Hacker News" data-sharer="hackernews" data-url="https://newtea.tk/flask/" data-title="flask"><i class="fab fa-hacker-news fa-fw" aria-hidden="true"></i></a><a href="javascript:void(0);" title="分享到 Line" data-sharer="line" data-url="https://newtea.tk/flask/" data-title="flask"><i data-svg-src="https://cdn.jsdelivr.net/npm/simple-icons@7.3.0/icons/line.svg" aria-hidden="true"></i></a><a href="javascript:void(0);" title="分享到 微博" data-sharer="weibo" data-url="https://newtea.tk/flask/" data-title="flask"><i class="fab fa-weibo fa-fw" aria-hidden="true"></i></a></span>
