--- a/deploy-chat/index.html
+++ b/deploy-chat/index.html
@@ -276,7 +276,7 @@ undefined
 		    	  requiredMeta: ["nick","mail"],
 		    	  login: "force",
 				  placeholder: "注册登录，悦你所想...",
-		    	  serverURL: "https://www.newtea.cf",
+		    	  serverURL: "https://www.newtea.ga",
 		    	  avatarCDN: "https://sdn.geekzu.org/avatar",
 		    	  pageSize:  20 ,
 		    	  avatar: "retro",
