--- a/web-share/index.html
+++ b/web-share/index.html
@@ -328,7 +328,7 @@ Moises，音乐家的应用程序，人工智能分离音乐音轨
 		    	  requiredMeta: ["nick","mail"],
 		    	  login: "force",
 				  placeholder: "注册登录，悦你所想...",
-		    	  serverURL: "https://www.newtea.cf",
+		    	  serverURL: "https://www.newtea.ga",
 		    	  avatarCDN: "https://sdn.geekzu.org/avatar",
 		    	  pageSize:  20 ,
 		    	  avatar: "retro",
