--- a/game-theory/index.html
+++ b/game-theory/index.html
@@ -247,7 +247,7 @@
 		    	  requiredMeta: ["nick","mail"],
 		    	  login: "force",
 				  placeholder: "注册登录，悦你所想...",
-		    	  serverURL: "https://www.newtea.ga",
+		    	  serverURL: "https://msg.newtea.tk",
 		    	  avatarCDN: "https://sdn.geekzu.org/avatar",
 		    	  pageSize:  20 ,
 		    	  avatar: "retro",
